# TpFinalTaller

./: .gitignore  CMakeLists.txt  README.md  _config.yml  config.h.in  documentacion-tecnica.md  index.md  manual-proyecto.md  manual-usuario.md  raycast.cpp  supreciones.valgrind
LogJuegoVentana/: CMakeLists.txt  pruebaSDLmain.cpp
LogJuegoVentana/include/: juego.h  textura.h
LogJuegoVentana/src/: juego.cpp  pruebaSDLmain.cpp  textura.cpp
client/: CMakeLists.txt
client/include/: animacion.h  anunciador.h  armaAnimada.h  audio.h  background.h  client.h  client_event_receiver.h  client_event_sender.h  cliente.h  enemigo.h  fonts.h  highscoreWindow.h  informacionJUgador.h  informacionJugador.h  juego.h  jugadorLua.h  label.h  lienzo.h  logInWindow.h  manejador_eventos.h  modelo.h  musica.h  objetoDibujable.h  objetoJuego.h  player.h  procesadorDeActualizaciones.h  rayo.h  scene.h  sonido.h  sprite.h  spriteAnimado.h  texto.h  textura.h  ventana.h
client/src/: animacion.cpp  anunciador.cpp  armaAnimada.cpp  audio.cpp  background.cpp  client.cpp  client_event_receiver.cpp  client_event_sender.cpp  client_main.cpp  cliente.cpp  cliente_main.cpp  config.yaml  configClient.yaml  enemigo.cpp  enemigo.h  fonts.cpp  highscoreWindow.cpp  informacionJugador.cpp  juego.cpp  jugadorLua.cpp  label.cpp  lienzo.cpp  logInWindow.cpp  manejador_eventos.cpp  modelo.cpp  musica.cpp  objetoDibujable.cpp  objetoJuego.cpp  player.cpp  procesadorDeActualizaciones.cpp  rayo.cpp  scene.cpp  sonido.cpp  sprite.cpp  suprecionsdl.cpp  texto.cpp  textura.cpp  ventana.cpp
client/src/LUA/: manejadorlua.cpp  manejadorlua.h  modulo.lua
client_src/: CMakeLists.txt  client.cpp  client.h
client_src/include/: cliente.h  juego.h  lienzo.h  objetoJuego.h  textura.h
client_src/src/: client_main.cpp  cliente.cpp  juego.cpp  lienzo.cpp  objetoJuego.cpp  textura.cpp
common/: CMakeLists.txt
common/include/: Area.h  SdlException.h  SdlTexture.h  SdlWindow.h  aceptador.h  actualizacion.h  ametralladora.h  arma.h  ataque.h  balas.h  blocking_queue.h  canionDeCadena.h  comando.h  comida.h  configuracionPartida.h  contenedorDeElementos.h  cuchillo.h  entidadPosicionable.h  estadoJuego.h  iserializable.h  item.h  item_tomado.h  jugador.h  kitsMedicos.h  logro.h  map.h  map_translator.h  movimiento.h  noItem.h  objetosJuego.h  parser.h  pistola.h  posicion.h  protected_queue.h  protocolo.h  puerta.h  ranking.h  sangre.h  socket.h  socket_error.h  (+3 more)
common/include/actualizaciones/: actualizacion.h  actualizacionAgarroItem.h  actualizacionAgregarItem.h  actualizacionAperturaPuerta.h  actualizacionAtaque.h  actualizacionCambioArma.h  actualizacionInicioPartida.h  actualizacionMovimiento.h  actualizacionTerminoPartida.h
common/include/armas/: ametralladora.h  arma.h  canionDeCadena.h  cuchillo.h  lanzacohetes.h  pistola.h
common/include/comandos/: aperturaDePuerta.h  ataque.h  cambioDeArma.h  comando.h  crearPartida.h  desconectarJugador.h  movimiento.h  rotacion.h  unirseAPartida.h
common/include/items/: balas.h  comida.h  item.h  kitsMedicos.h  llave.h  noItem.h  sangre.h  tesoro.h
common/src/: Area.cpp  SdlException.cpp  SdlTexture.cpp  SdlWindow.cpp  aceptador.cpp  actualizacion.cpp  ametralladora.cpp  arma.cpp  ataque.cpp  balas.cpp  canionDeCadena.cpp  comida.cpp  configuracionPartida.cpp  contenedorDeElementos.cpp  cuchillo.cpp  estadoJuego.cpp  item_tomado.cpp  jugador.cpp  kitsMedicos.cpp  logro.cpp  map.cpp  map_translator.cpp  movimiento.cpp  parser.cpp  pistola.cpp  posicion.cpp  protected_queue.cpp  protocolo.cpp  puerta.cpp  ranking.cpp  sangre.cpp  socket.cpp  socket_error.cpp  socket_error_aceptar.cpp  tcp_protocol.cpp  thclient.cpp  thread.cpp
common/src/actualizaciones/: actualizacion.cpp  actualizacionAgarroItem.cpp  actualizacionAgregarItem.cpp  actualizacionAperturaPuerta.cpp  actualizacionAtaque.cpp  actualizacionCambioArma.cpp  actualizacionInicioPartida.cpp  actualizacionMovimiento.cpp  actualizacionTerminoPartida.cpp
common/src/armas/: ametralladora.cpp  arma.cpp  canionDeCadena.cpp  cuchillo.cpp  lanzacohetes.cpp  pistola.cpp
common/src/comandos/: aperturaDePuerta.cpp  ataque.cpp  cambioDeArma.cpp  comando.cpp  crearPartida.cpp  item_tomado.cpp  (+4 more)
common_src/: CMakeLists.txt  SdlTexture.h  socket.cpp  tcp_protocol.h
common_src/include/: Item.h  arma.h  ataque.h  comando.h  comida.h  cuchillo.h  estadoJuego.h  item.h  item_catch.h  item_tomado.h  jugador.h  map.h  map_translator.h  movimiento.h  pistola.h  protected_queue.h  sangre.h  thread.h
common_src/src/: Area.cpp  SdlTexture.cpp  SdlWindow.cpp  ataque.cpp  comando.cpp  comida.cpp  cuchillo.h  estadoJuego.cpp  item_catch.cpp  item_tomado.cpp  jugador.cpp  map.cpp  map_translator.cpp  movimiento.cpp  pistola.cpp  protected_queue.cpp  tcp_protocol.cpp  thread.cpp
editor/: CMakeLists.txt  editor.h  editor_main.cpp
editor/include/: editor.h  mainwindow.h  map_tiles_list.h  map_widget.h  new_tile.h
editor/src/: config.yaml  editor.cpp  editor_main.cpp  mainwindow.cpp  map_tiles_list.cpp  map_widget.cpp  new_tile.cpp
raycasting_test/: CMakeLists.txt  juego.cpp  juego.h  lienzo.cpp  objetoJuego.cpp  objetoJuego.h  player.h  raycast.cpp  rayo.cpp  rayo.h  textura.cpp
server/: CMakeLists.txt
server/include/: InvalidMapException.h  aceptador.h  client_processor.h  cliente.h  jugadorLua.h  manegadorPartidas.h  manejadorCliente.h  manejadorPartidas.h  old_cliente.h  parser.h  partida.h  server_event_receiver.h  server_event_sender.h  servidor.h  thclient.h
server/src/: InvalidMapException.cpp  aceptador.cpp  cliente.cpp  config.yaml  jugadorLua.cpp  manejadorPartidas.cpp  parser.cpp  partida.cpp  server_event_receiver.cpp  server_event_sender.cpp  server_main.cpp  servidor.cpp  thclient.cpp
server_src/: CMakeLists.txt  client_manager.cpp  client_manager.h  client_processor.cpp  client_processor.h  server.cpp  server.h  server_main.cpp
server_src/include/: client_manager.h  client_processor.h  cliente.h  servidor.h
server_src/src/: client_manager.cpp  client_processor.cpp  cliente.cpp  server_main.cpp  servidor.cpp
(+56 files in other folders)
